# Site-8-backend

./: .gitignore  Cargo.toml  Rocket.toml  justfile
migrations/: 20250712062215_notices.sql  20250716143850_users.sql
src/: main.rs
src/notices/: api.rs  mod.rs  model.rs
src/users/: api.rs  method.rs  mod.rs  model.rs
