[package]
name = "Site-8-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
